💄 fix too big frontpage image in IE

--- a/assets/sass/helpers.scss
+++ b/assets/sass/helpers.scss
@@ -12,7 +12,10 @@
   align-items: center;
 }
 
-.w-100 { width: 100%; }
+.w-100 {
+  width: 100%;
+  flex: 0 0 100%;
+}
 
 .mt-0 { margin-top: 0; }
 .mb-0 { margin-bottom: 0; }
